W32: Detect ticks wraparound

https://bugzilla.gnome.org/show_bug.cgi?id=748327